Clean up implementation plan
Condense PLANS.md into the current project goal, implemented state, remaining work, verification steps, and constraints.

Assisted-by: codex:gpt-5.5